...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="I want food"/>
                                <connections>
                                    <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vpL-tw-cWg"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="10u-XQ-VeS">
                        <barButtonItem key="leftBarButtonItem" title="Settings" id="vQE-Iq-bWC">
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="My orders" id="riJ-g2-bem">
                            <connections>
                                <segue destination="8Eh-wK-row" kind="show" id="YLk-kw-KBP"/>
...
                                    <constraint firstAttribute="width" constant="322" id="p0Q-9p-Q6l"/>
                                </constraints>
                                <state key="normal" title="Submit"/>
                                <variation key="default">
                                    <mask key="constraints">
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="gKJ-P8-IRU">
                                            <rect key="frame" x="15" y="11" width="34" height="20"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Add new food item..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UdD-aZ-siZ">
                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="New Order" id="2HZ-eB-W8G">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="SgT-GS-E1W">
                            <connections>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Orders" id="543-0v-ThO"/>
                    <connections>
                        <segue destination="3Yk-Wb-DTS" kind="show" identifier="myOrderSegue" id="q1H-lj-lx0"/>
...
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Any driver" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="xup-r5-gMh">
                                            <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
        <scene sceneID="o7t-BG-Coc">
            <objects>
                <viewController title="Expires In" id="pyO-EU-ybm" customClass="ExpiresInViewController" customModule="Foodini" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="mLr-ym-mhX"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Choose a restaurant" id="OBG-Hq-Xwh"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="9Jq-cH-w0N" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
        <scene sceneID="NIP-ps-NzL">
            <objects>
                <tableViewController storyboardIdentifier="newFoodItem" title="Food item" id="C1F-Kf-Sbh" customClass="NewFoodItemTableViewController" customModule="Foodini" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="9IJ-v5-2bO">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Details" textAlignment="natural" minimumFontSize="16" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="XsA-KL-cT3" userLabel="details">
                                                    <rect key="frame" x="8" y="7" width="584" height="30"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                            <rect key="frame" x="529" y="8" width="63" height="33"/>
                                            <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
                                            <state key="normal" title="Add"/>
                                            <connections>
                                                <action selector="add:" destination="DZs-7z-rtz" eventType="touchUpInside" id="Qnf-ZE-Sfq"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Choose delivery location" id="DQa-Wb-Evg"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="LWL-aD-eP9" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <color key="backgroundColor" red="0.89019607840000003" green="0.89019607840000003" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
                            <state key="normal" title="Cancel">
                                <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            </state>
...
