...
    @IBOutlet weak var foodItem: UILabel!
    @IBOutlet weak var foodDescription: UILabel!
}

class NewOrderViewController: UITableViewController, NewFoodItemViewDelegate, ChooseDriverDelegate, RestaurantsNewOrderDelegate, DeliveryLocationDelegate {
    var sectionHeaders = ["Restaurant", "Food", "Delivery"]
    var deliverySectionTitles = ["Delivered by", "Location", "Expires in"]
    var deliverySectionPrompts = ["Select a driver...", "Select delivery location...", "Select expiration time..."]
    var delegate: NewOrderViewDelegate!
    let order = Order()
    var current = NSIndexPath()
    let user = PFUser.currentUser()!
    
    enum Section: Int {
...
    }
    
    func cellForRestaurantSection(tableView: UITableView, cellForRowAtIndexPath indexPath: NSIndexPath) -> UITableViewCell {
        let restaurantCell = tableView.dequeueReusableCellWithIdentifier("chooseRestaurantCell", forIndexPath: indexPath) as! ChooseRestaurantCell
        var restaurantName: String = order.restaurant.name

        if restaurantName == "Select restaurant..." {
            restaurantCell.name.textColor = UIColor.grayColor()
        } else {
            restaurantCell.name.textColor = UIColor.blackColor()
        }
        
        restaurantName.makeFirstLetterInStringUpperCase()
...
