...
    @IBOutlet weak var actionButton: UIButton!
    
    @IBAction func driverAction(sender: UIButton) {
        if order.orderState == OrderState.Available {
            
            let alert = UIAlertController(title: "Pick up order", message: "Are you sure you want to pick up this order?", preferredStyle: UIAlertControllerStyle.ActionSheet)
            alert.addAction(UIAlertAction(title: "Yes", style: .Default, handler: { (action: UIAlertAction!) in
                sender.enabled = false
                self.order.acquire() { result in
                    if result {
                        // Order successfully acquired
                        if self.driverDelegate != nil {
                            self.manip.driver_setAcquiredStyleFor(sender)
...
            
            let alert = UIAlertController(title: "Pay", message: "Enter the order's dollar amount from the receipt.", preferredStyle: UIAlertControllerStyle.Alert)
            alert.addTextFieldWithConfigurationHandler({ (field: UITextField) in
                field.placeholder = "$##.##"
                field.keyboardType = .DecimalPad
            })
            alert.addAction(UIAlertAction(title: "Done", style: .Default, handler: { (action: UIAlertAction!) in
                sender.enabled = false
                self.order.payFor() { result in
                    if result {
                        // Order successfully paid for
                        self.manip.setDriverStyleFor(sender, toReflect: OrderState.PaidFor)
                    } else {
...
